[package]
name = "camo-rs"
version = "0.1.0"
edition = "2021"
authors = ["AprilNEA <dev@aprilnea.me> (https://aprilnea.me)"]
description = "A Rust implementation of Camo - SSL image proxy"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

# Crypto
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Config & CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# URL parsing
url = "2"
urlencoding = "2"

# Metrics (optional)
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[profile.release]
lto = true
codegen-units = 1
strip = true
