[package]
name = "camo-rs"
version = "0.1.0"
edition = "2021"
authors = ["AprilNEA <dev@aprilnea.me> (https://aprilnea.me)"]
description = "A Rust implementation of Camo - SSL image proxy"
license = "MIT"
repository = "https://github.com/AprilNEA/camo-rs"
keywords = ["camo", "proxy", "image", "ssl", "https"]
categories = ["web-programming", "network-programming"]

[lib]
name = "camo"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "camo-rs"
path = "src/main.rs"
required-features = ["server"]

[features]
default = ["client"]
# Core URL signing functionality (minimal dependencies)
client = []
# Full proxy server with CLI
server = [
    "dep:tokio",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:reqwest",
    "dep:clap",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:thiserror",
    "dep:anyhow",
    "dep:url",
    "dep:urlencoding",
    "dep:metrics",
    "dep:metrics-exporter-prometheus",
    "dep:serde",
]
# Cloudflare Workers support
worker = [
    "dep:worker",
    "dep:urlencoding",
    "dep:console_error_panic_hook",
]

[dependencies]
# Core dependencies (always included)
hmac = "0.12"
sha1 = "0.10"
hex = "0.4"
base64 = "0.22"

# Server dependencies (optional)
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"], optional = true }
clap = { version = "4", features = ["derive", "env"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
thiserror = { version = "2", optional = true }
anyhow = { version = "1", optional = true }
url = { version = "2", optional = true }
urlencoding = { version = "2", optional = true }
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.16", optional = true }

# Cloudflare Workers dependencies (optional)
worker = { version = "0.7", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "s"
