[package]
name = "camo-rs"
version = "0.1.1"
edition = "2024"
authors = ["AprilNEA <dev@aprilnea.me> (https://aprilnea.me)"]
description = "Camo proxies insecure HTTP images over HTTPS, preventing mixed content warnings on secure pages."
license = "MIT"
repository = "https://github.com/AprilNEA/camo-rs"
keywords = ["camo", "proxy", "image", "ssl", "https"]
categories = ["web-programming", "network-programming"]

[lib]
name = "camo"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "camo"
path = "src/cli.rs"
required-features = ["server", "client"]

[features]
default = ["client"]
# Core URL signing functionality (minimal dependencies)
client = []
_common-serve-deps = [
    "dep:axum",
    "dep:thiserror",
    "dep:anyhow",
    "dep:url",
    "dep:urlencoding",
]
metrics = []
# Full proxy server with CLI
server = [
    "_common-serve-deps",
    "metrics",
    "axum/tokio",
    "reqwest",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:clap",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:metrics",
    "dep:metrics-exporter-prometheus",
    "dep:serde",
]
# Cloudflare Workers support
worker = [
    "_common-serve-deps",
    "dep:worker",
    "dep:worker-macros",
    "dep:tower-service",
    "dep:console_error_panic_hook",
    "dep:send_wrapper",
    "dep:pin-project",
]

[dependencies]
# Core dependencies (always included)
hmac = "0.12"
sha1 = "0.10"
hex = "0.4"
base64 = "0.22"
async-trait = "0.1"

# Common server dependencies
clap = { version = "4", features = ["derive", "env"], optional = true }
thiserror = { version = "2", optional = true }
anyhow = { version = "1", optional = true }
url = { version = "2", optional = true }
urlencoding = { version = "2", optional = true }
axum = { version = "0.8", default-features = false, features = [
    "macros",
    "query",
    "http1",
], optional = true }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
], optional = true }

# Server dependencies (optional)
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }

serde = { version = "1", features = ["derive"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }

metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.16", optional = true }

# Cloudflare Workers dependencies (optional)
worker = { version = "0.7", features = ['http', 'axum'], optional = true }
worker-macros = { version = "0.7", features = ['http'], optional = true }
tower-service = { version = "0.3.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
send_wrapper = { version = "0.6", optional = true }
pin-project = { version = "1", optional = true }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "s"
